service-mesh/istio-1.0-vm/dsav/report/dsav-report-deploy.yaml
# this file for deployment report
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dsav-report
  labels:
    app: dsav-report
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dsav-report
    spec:
      #affinity:
       # nodeAffinity:
        #  requiredDuringSchedulingIgnoredDuringExecution:
         #   nodeSelectorTerms:
          #    - matchExpressions:
           #     - key: app
            #      operator: In
             #     values: ["yes"]
      containers:
      - name: dsav-report
        image: tnindo/dsav_report:v1stag.0.19
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /go/src/report/logs
          name: report-logs
      restartPolicy: Always
      volumes:
      - name: report-logs
        hostPath:
          path: /data/saving_digital_report/logs
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
